# AI-Career-Assistant

./: .env.example  .gitignore  AI Career Assistant System.md  MEMBER3_ARCHITECTURE.md  MEMBER3_FILE_STRUCTURE.md  MEMBER3_IMPLEMENTATION_PLAN.md  MEMBER3_TASK_BREAKDOWN.md  MEMBER3_TESTING_PLAN.md  PHASE3_IMPLEMENTATION_REPORT.md  README.md  package-lock.json  package.json  requirements.txt
backend/: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  api_contracts.md  application_flow.md  automation_architecture.md  database_schema.md  docker-compose.override.yml  docker-compose.yml  log_stream.py  main.py  pyproject.toml  requirements.txt  retry_and_error_strategy.md  security_guardrails.md  selenium_strategy.md  task_breakdown.md  testing_strategy.md
backend/.github/workflows/: ci.yml
backend/app/: __init__.py  main.py
backend/app/api/v1/: applications.py  approvals.py  audit.py  auth.py  health.py  router.py
backend/app/browser/drivers/: __init__.py  driver_factory.py
backend/app/browser/forms/: __init__.py  form_automation.py
backend/app/browser/observability/: __init__.py
backend/app/core/: auth.py  config.py  database.py  exceptions.py  logging.py  redis.py  security.py
backend/app/email/: __init__.py
backend/app/hitl/: __init__.py
backend/app/integrations/: __init__.py
backend/app/middleware/: request_id.py
backend/app/models/: __init__.py  orm.py  rbac.py  schemas.py
backend/app/orchestration/: __init__.py
backend/app/services/: application_service.py  auth_service.py  mfa_service.py  session_manager.py
backend/app/tasks/: application_tasks.py  celery_app.py
backend/docker/: Dockerfile  Dockerfile.worker
backend/docs/: failure_recovery.md  local_development.md  production_runbook.md  queue_architecture.md  runtime_flow.md  state_machine.md
backend/migrations/: __init__.py  env.py  script.py.mako
backend/migrations/versions/: 001_initial_schema.py  1bd19579181b_create_rbac_tables.py  7344c6e23ae5_create_email_sends_table.py  ec99ab373fe0_create_approval_requests_table.py
backend/scripts/: golden_path_validation.py  healthcheck.py  seed_rbac.py  validate_pipeline.ps1  verify_rbac.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_applications.py  test_api_health.py
backend/tests/load/: __init__.py  load_test.py
backend/tests/resources/: greenhouse_form.html  lever_form.html  sandbox_form.html
backend/tests/unit/: test_auth.py  test_browser_foundation.py  test_browser_observability.py  test_email_pipeline.py  test_human_in_the_loop.py  test_orchestration_safety.py  test_phase_a.py  test_platform_adapters.py  test_rbac.py  test_retry_logic.py  test_status_machine.py
(+199 files in other folders)
